ws completo ya estoy hasta la verga XD

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,9 @@
 
         <activity android:name=".CatalogoImagenes"
             android:label="Catalogo Imagenes"/>
+
+        <activity android:name=".ObtenerDatosCompletos"
+            android:label="Sincronizar"/>
     </application>
 
 </manifest>
