--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
@@ -32,33 +31,35 @@
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".VentanaPrincipal"
-            android:label="main"/>
-
-        <activity android:name=".fragments.CaptureSignature"
-            android:label="Autorización"/>
-
-        <activity android:name=".fragments.InformacionSolicitante"
-            android:label="Informacion solicitante"/>
-
-        <activity android:name=".fragments.DatosConyugeHijos"
-            android:label="Datos Conyuge"/>
-
-        <activity android:name=".fragments.InformacionLaboral"
-            android:label="Información Laboral"/>
-
-        <activity android:name=".fragments.ReferenciasPersonales"
-            android:label="Referencias Personales"/>
-
-        <activity android:name=".fragments.ReferenciasPersonalesDistintoDomicilio"
-            android:label="Referencias personales Distinto Domicilio"/>
-
-        <activity android:name=".fragments.CatalogoImagenes"
-            android:label="Catalogo Imagenes"/>
+        <activity
+            android:name=".VentanaPrincipal"
+            android:label="main" />
+        <activity
+            android:name=".fragments.CaptureSignature"
+            android:label="Autorización" />
+        <activity
+            android:name=".fragments.InformacionSolicitante"
+            android:label="Informacion solicitante" />
+        <activity
+            android:name=".fragments.DatosConyugeHijos"
+            android:label="Datos Conyuge" />
+        <activity
+            android:name=".fragments.InformacionLaboral"
+            android:label="Información Laboral" />
+        <activity
+            android:name=".fragments.ReferenciasPersonales"
+            android:label="Referencias Personales" />
+        <activity
+            android:name=".fragments.ReferenciasPersonalesDistintoDomicilio"
+            android:label="Referencias personales Distinto Domicilio" />
+        <activity
+            android:name=".fragments.CatalogoImagenes"
+            android:label="Catalogo Imagenes" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
