--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,36 +32,16 @@
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".VentanaPrincipal"
+            android:label="main" />
+        <activity android:name=".MainActivity">
 
-        <activity android:name=".VentanaPrincipal"
-            android:label="main"/>
-
-        <activity android:name=".CaptureSignature"
-            android:label="Autorización"/>
-
-        <activity android:name=".InformacionSolicitante"
-            android:label="Informacion solicitante"/>
-
-        <activity android:name=".DatosConyugeHijos"
-            android:label="Datos Conyuge"/>
-
-        <activity android:name=".InformacionLaboral"
-            android:label="Información Laboral"/>
-
-        <activity android:name=".ReferenciasPersonales"
-            android:label="Referencias Personales"/>
-
-        <activity android:name=".ReferenciasPersonalesDistintoDomicilio"
-            android:label="Referencias personales Distinto Domicilio"/>
-
-        <activity android:name=".CatalogoImagenes"
-            android:label="Catalogo Imagenes"/>
-
-        <activity android:name=".ObtenerDatosCompletos"
-            android:label="Sincronizar"/>
+        </activity>
     </application>
 
 </manifest>
